DOM & type casting done

--- a/pure-ts/public/index.html
+++ b/pure-ts/public/index.html
@@ -38,6 +38,6 @@
       </form>
     </footer>
 
-    <script src="functions.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
