Tuples & Enums done

--- a/pure-ts/public/index.html
+++ b/pure-ts/public/index.html
@@ -38,6 +38,6 @@
       </form>
     </footer>
 
-    <script src="./generics.js"></script>
+    <script src="./enumtuple.js"></script>
   </body>
 </html>
